--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,8 @@
+Libraries being used: 
+
+* http://plugins.adchsm.me/slidebars
+
+---- 
 == README
 
 This README would normally document whatever steps are necessary to get the
