Making it a bit more obvious that the language has actually changed

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -26,3 +26,4 @@ es:
   tagline: 'Un diario de donaciones a projectos que te importan'
   # donations
   donation_created: 'Donation created! You are amazing'
+  choose_your_language: 'Elige tu idioma'
