--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -26,3 +26,4 @@ fr:
   tagline: 'Wadus in fr'
   # donations
   donation_created: 'Donation created! You are amazing'
+  choose_your_language: 'Choisissez votre langue'
