Refactor project from included in donation form
Apart from that, a few refactors in the method that sets the parameters of the donation in the cookies when the user is not logged in

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -50,3 +50,5 @@ es:
       donated: donado
       in_the_last_month: en el último mes
       in_total: en total
+    show:
+      edit_your_profile: Edita tu perfil
