--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -84,3 +84,5 @@ en:
       donated: donated
       in_the_last_month: in the last month
       in_total: in total
+    show:
+      edit_your_profile: Edit your profile
