--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,3 +100,9 @@ en:
       in_total: in total
     show:
       edit_your_profile: Edit your profile
+  shared:
+    user_links:
+      hello: "Hello %{name}"
+      log_out: Log out
+      login: Login
+      track_your_first_donation: Track your first donation
