--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -70,3 +70,9 @@ es:
       in_total: en total
     show:
       edit_your_profile: Edita tu perfil
+  shared:
+    user_links:
+      hello: "Hola %{name}"
+      log_out: Salir
+      login: Identificarse
+      track_your_first_donation: Registra tu primera donación
