--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,8 @@ en:
   login_if_you_already: 'Login if you already have tracked'
   # donations
   donations:
+    destroy:
+      destroy_success: 'Donation removed successfully'
     show:
       donation_created: 'Hooray! Your donation is tracked. You can share it with your friends to encourage them to donate as well'
       keep_the_quantity_private: 'Keep the quantity private'
@@ -63,7 +65,15 @@ en:
       more_donations_by: 'More donations by %{user}'
       other_projects: 'Other projects'
     donation_do_widget:
-      link_title: 'Track a Donation for this project'    
+      link_title: 'Track a Donation for this project'
+    donation:
+      to: 'to'
+      by: 'by'
+      edit: 'Edit'
+      edit_title: 'Edit donation'
+      delete: 'Delete'
+      delete_title: 'Delete donation'
+      sure: 'Are you sure?'
   # donations form
   how_much_question: 'How much?'
   when_did_you_donate: 'When did you donate?'
