--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,6 +114,8 @@ en:
       in_total: in total
     show:
       edit_your_profile: Edit your profile
+    index:
+      please_log_in: Please log in
   shared:
     user_links:
       hello: "Hello %{name}"
