--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,6 +115,7 @@ en:
     pending_invites: "You have %{count} invites available. Put them to good use and let your friends promote the projects they donate to."
     already_exists: Mmm... it seems that the email you are trying to invite is already registered or is not a correct email. Try another!
     invitation_send_subject: 'Your friend %{friend} wants you to track and share your donations'
+    accepted_invitation_subject: 'Your friend %{friend} has accepted your invitation'
     invitation_sent: 'Great, your invitation has been sent. Lets see if your friend is such a great person as you are ;)'
     not_valid: 'Mmm... your invitation does not seem to be valid.'
     welcomme_message: 'Great! With this invitation you can sign up for TrackDons and start tracking your donations. And after your first tracks, you will also be able to invite that friend you know needs this project'
@@ -128,6 +129,13 @@ en:
         Have you donated recently to any project? Track it and tell it to your friends:
 
         %{url}
+
+        If you have any comment, just write us to lets@trackdons.org
+    accepted_invitation:
+      accepted_invitation_mail: |
+        Hi,
+
+        Your friend %{name} has just accepted your invitation to join TrackDons.org. Therefore, you'll have a new invitation available to invite new friends.
 
         If you have any comment, just write us to lets@trackdons.org
   metas:
