--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,33 +2,39 @@ es:
   language_name: 'Español'
   hello: "Hello world"
   # generics
-  proyecto: 'Projecto'
-  proyectos: 'proyectoos'
+  project: 'Projecto'
+  projects: 'proyectos'
+  Projects: 'Proyectos'
   description: 'Descripción'
   url: 'URL'
-  donación_url: 'URL de donativos'
+  donation_url: 'URL para donaciones'
   create: 'Crear'
-  donaciones: 'Donaciones'
-  users: 'Usuarios'
-  about: 'Acerca de'
+  donations: 'donaciones'
+  Donations: 'Donaciones'
+  users: 'usuarios'
+  Users: 'Usuarios'
+  about: 'acerca de'
+  About: 'Acerca de'
   invite: 'Invitar'
   choose_your_language: 'Elige tu idioma'
-  want_to_contribute_your_own_language: '¿Quieres mejorar to idioma?'
+  want_to_contribute_your_own_language: '¿Quieres contribuir con tu idioma?'
   # home
-  tagline: 'Un diario de donaciones a proyectoos que te importan'
-  main_bullet_1: 'Capta más donantes para los proyectos en los que crees, mostrando tus donaciones'
-  main_bullet_2: "Registra los proyectos que has donado -- y no te olvides de seguir haciéndolo"
-  main_bullet_3: 'Descubre proyectos que deberías de estar apoyando'
-  read_more_about_this_proyecto: 'Leer más sobre este proyecto'
+  tagline: 'Un diario de las donaciones que realizas a los proyectos que te importan'
+  main_bullet_1: 'Ayuda a captar más donantes para los proyectos en los que crees mostrando tus donaciones'
+  main_bullet_2: "Registra los proyectos a los que has donado -- y no te olvides de seguir haciéndolo"
+  main_bullet_3: 'Descubre los proyectos a los que deberías estar apoyando'
+  read_more_about_this_proyect: 'Más sobre este proyecto'
   track_a_donación: 'Registra una donación'
   track_your_first_donación: 'Registra tu primera donación'
   login_if_you_already: 'Identifícate si ya has registrado alguna donación'
+  home: 
+    read_more_about_this_project: "Más sobre este proyecto"
   # donaciones
-  donaciones:
+  donations:
     destroy:
       destroy_success: 'Donación eliminada correctamente'
     show:
-      donación_created: 'Viva! Tu donación queda apuntada. Compártela con tus amigos y anímales a que donen también'
+      donation_created: 'Viva! Tu donación queda apuntada. Compártela con tus amigos y anímales a que donen también'
       keep_the_quantity_private: 'Mantener la cantidad en privado'
       share_in_twitter: 'Compartir en Twitter'
       share_in_facebook: 'Compartir en Facebook'
@@ -38,14 +44,14 @@ es:
       share_email_subject: 'Has donado últimamente?'
       share_email_body: 'Con TrackDons puedes llevar la cuenta de todas tus donaciones y animar a otros a donar. Por ejemplo, aquí puedes ver mi última donación a %{proyecto}: %{url}'
       share_tweet: 'Has colaborado con algún proyecto flipante hoy? Mi última donación en @trackdons: %{url}'
-      donación_date: 'Fecha de donación: %{date}'
+      donation_date: 'Fecha de donación: %{date}'
       next: 'Más:'
-      proyecto_page: 'La página de %{project}'
-      more_donaciones_by: 'Más donaciones de %{user}'
-      other_proyectos: 'Otros proyectos'
+      project_page: 'La página de %{project}'
+      more_donations_by: 'Más donaciones de %{user}'
+      other_projects: 'Otros proyectos'
     donación_do_widget:
       link_title: 'Anota tus donaciones con TrackDons'
-    donación:
+    donation:
       to: 'a'
       by: 'por'
       edit: 'Editar'
@@ -54,38 +60,38 @@ es:
       delete_title: 'Borrar donación'
       sure: '¿Estás seguro?'
     form:
-      update_donación: Actualizar
+      update_donation: Actualizar
       cancel: Cancelar
-      edit_your_donación: Edita tu donación al proyecto %{name}
+      edit_your_donation: Edita tu donación al proyecto %{name}
       quantity_privacy_hint: "No seas tímido compartiendo la cantidad. Todo el mundo dona lo que quiere o siente que es correcto. Incluso un céntimo sería bueno. Por otro lado sería divertido estudiar cómo el compartamiento de uno afecta a los demás... ¡para bueno o para malo!"
   # donaciones form
   how_much_question: '¿Cuánto?'
   when_did_you_donate: '¿Cuándo donaste?'
   i_want_to_explain_why: 'Quiere explicar por qué he donado para animar a otros'
   i_want_to_keep_private: 'Quiero mantener mi donación privada'
-  need_to_trackdon_for_another_proyecto: '¿Quieres TrackDon en otro proyecto?'
-  proyectos:
-    proyecto: 'Projecto'
-    all_proyectos: 'Todos los proyectos'
-    new_proyecto: 'Nuevo projyecto'
-    donate_in_proyecto_site: "Donar en la página del proyecto"
+  need_to_trackdon_for_another_project: '¿Quieres TrackDon en otro proyecto?'
+  projects:
+    project: 'Proyecto'
+    all_projects: 'Todos los proyectos'
+    new_project: 'Nuevo proyecto'
+    donate_in_project_site: "Donar en la página del proyecto"
     did_you_track: '¿Has donado a este proyecto? TrackDon!'
     invite_your_friends_to_this_page: 'Invita a tus amigos a esta página'
     new:
-      existing_proyecto_error: Ya existe un proyecto con este nombre
+      existing_project_error: Ya existe un proyecto con este nombre
     create:
-      proyecto_created: Projecto creado. ¡Compártelo y comienza a guardar donaciones!
+      project_created: Projecto creado. ¡Compártelo y comienza a guardar donaciones!
     show:
       have_you_donated: ¿Has donado al proyecto?
       do_you_want_to_actually_donate: ¿Quieres donar al proyecto?
       invite_your_friends_to_this_page: Invita a tus amigos a esta página
-      donaciones_last_week:
+      donation_last_week:
         one: "%{count} donación la semana pasada"
         other: "%{count} donaciones la semana pasada"
       people_donated:
         one: "%{count} persona ha donado en total"
         other: "%{count} personas ha donado en total"
-      donaciones_in_total:
+      donation_in_total:
         one: "%{count} donacion en total"
         other: "%{count} donaciones en total"
   shared:
@@ -98,7 +104,7 @@ es:
     invite: 'Invita un amigo'
     you_already_have_an_account: '¡Ya tienes una cuenta! Guarda la invitación para alguien más...'
     dont_have_an_account_yet_html: Don't have an account yet? We are just getting started and letting people in bit by bit. You can ask a friend for an invitation, or answer these %{href} that will help us shape the product to get an invite soon.
-    dont_have_an_account_yet_html: ¿Aún no tienes una cuenta? Estamos empezando y dejando poco a poco a la gente registrarse. Puedes pedirle a un amigo una invitación, o responder estas preguntas %{href} que nos ayudarán a definir el producto y darte antes una invitación.
+    dont_have_an_account_yet_html: ¿Aún no tienes una cuenta? Estamos empezando y dejando poco a poco a la gente registrarse. Puedes pedirle a un amigo una invitación, o responder estas %{href} que nos ayudarán a definir el producto y darte antes una invitación.
     dont_have_an_account_yet_href: 'preguntas rápidas'
     labels:
       your_friends_name: El nombre de tu amigo/a
@@ -111,6 +117,7 @@ es:
       edit_your_profile: Edita tu perfil
     index:
       please_log_in: Por favor, inicia sesión
+    remember_me: Recuérdame en este equipo
   invitations:
     dont_have_enough_invitations: No tienes suficientes invitaciones. Sigue registrando donaciones y más, y pronto tendrás nuevas invitaciones.
     pending_invites: "Tienes %{count} invitaciones disponibles. Dales buen uso y deja a tus amigos promocionar proyectos a los que donan."
@@ -137,12 +144,12 @@ es:
     about:
       description: Saber más sobre TrackDons, su organización, cómo funciona, cómo puedes colaborar...
       title: 'About'
-    proyectos:
+    projects:
       home: 
         description: Navega y descubre todos los diferentes proyectos donde puedes donar
         title: Todos los proyectos
         keywords: proyectos, donación, descubre
-      proyecto:
+      project:
         description: Registra tus donaciones a %{name} con TrackDons y mejora el alcance del proyecto
         title: Todos los proyectos
         keywords: proyectos, donación, descubre
